[package]
name = "rboy"
version = "0.2.0"
authors = [ "mvdnes <git@mathijs.vd-nes.nl>" ]
edition = "2018"

[dependencies]
librboy = { path = "librboy", version = "*" }
clap = "4"
cpal = "0.15"
glium = "0.34"
winit = "0.29"

[[bin]]
name = "rboy"
test = false
doc = false

[profile.release]
lto = true
