[package]
name = "rboy"
version = "0.2.0"
authors = [ "mvdnes <git@mathijs.vd-nes.nl>" ]
edition = "2018"

[dependencies]
blip_buf = ">=0.1.3"
clap = { version = "4", optional = true }
cpal = { version = "0.15", optional = true }
glium = { version = "0.34", optional = true }
winit = { version = "0.29", optional = true }

[features]
gui = [ "clap", "cpal", "glium", "winit" ]

[[bin]]
name = "rboy"
test = false
doc = false
required-features = [ "gui" ]

[profile.release]
lto = true
