[package]
name = "rboy"
version = "0.2.0"
authors = [ "mvdnes <git@mathijs.vd-nes.nl>" ]
edition = "2018"

[dependencies]
blip_buf = ">=0.1.3"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4", optional = true }
cpal = { version = "0.15", optional = true }
glium = { version = "0.34", optional = true }
winit = { version = "0.29", optional = true }
serde_arrays = "0.2.0"
typetag = "0.2.20"
ciborium = "0.2.2"

[features]
gui = [ "clap", "glium", "winit" ]
audio = [ "cpal" ]
test = []

[[bin]]
name = "rboy"
test = false
doc = false
required-features = [ "gui", "audio" ]

[profile.release]
lto = true
